Fix bug where descriptions of carousel are cut off

--- a/Teaching and Learning/topnotcher.css
+++ b/Teaching and Learning/topnotcher.css
@@ -1,6 +1,6 @@
 /* topnotcher */
 .extension-community-main{
-    height: 100dvh;
+    min-height: 100dvh;
     margin: 0;
     padding-top: 2em;
     display: flex;
